# py-pglite

./: .bandit  .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  .safety-project.ini  CONTRIBUTING.md  Makefile  README.md  hacking.py  pyproject.toml  pytest.ini
.github/: README.md  copilot-instructions.md
.github/actions/setup-environment/: action.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  conftest.py  pytest.ini  test_advanced.py  test_basic.py  test_example_utils.py  test_fastapi_auth_example.py  test_fastapi_integration.py  test_utils.py
examples/features/: test_pgvector_rag.py
examples/quickstart/: demo_instant.py  simple_asyncpg.py  simple_fastapi.py  simple_performance.py
examples/testing-patterns/: conftest.py  test_advanced_patterns.py  test_fixtures_showcase.py  test_performance_benchmarks.py
examples/testing-patterns/django/: README.md  conftest.py  test_django_fixtures.py  test_django_quickstart.py  test_pytest_django.py
examples/testing-patterns/django/comparison/: test_both_patterns.py
examples/testing-patterns/django/full-integration/: test_backend_advanced.py  test_backend_basic.py  test_backend_pytest_django.py
examples/testing-patterns/django/lightweight/: test_socket_advanced.py  test_socket_basic.py  test_socket_pytest_django.py
examples/testing-patterns/sqlalchemy/: conftest.py  test_sqlalchemy_quickstart.py
py_pglite/: __init__.py  clients.py  config.py  extensions.py  fixtures.py  manager.py  pytest_plugin.py  utils.py
py_pglite/django/: __init__.py  backend.py  fixtures.py  utils.py
py_pglite/django/backend/: base.py
py_pglite/sqlalchemy/: __init__.py  fixtures.py  utils.py
scripts/: dev.py  hacking.py
src/py_pglite/: __init__.py  clients.py  config.py  extensions.py  fixtures.py  manager.py  pytest_plugin.py  utils.py
src/py_pglite/django/: __init__.py  fixtures.py  utils.py
src/py_pglite/django/backend/: __init__.py  base.py
src/py_pglite/sqlalchemy/: __init__.py  fixtures.py  manager.py  manager_async.py  utils.py
tests/: README.md  test_advanced.py  test_advanced_async.py  test_client_compatibility.py  test_client_compatibility_async.py  test_client_error_coverage.py  test_clients.py  test_config_comprehensive.py  test_config_edge_cases.py  test_config_validation_coverage.py  test_configuration.py  test_connection_management.py  test_connection_management_async.py  test_connection_resilience.py  test_core_manager.py  test_django_backend.py  test_django_backend_coverage.py  test_django_fixtures_comprehensive.py  test_enhanced_process_cleanup.py  test_extensions.py  test_extensions_registry.py  test_fastapi_integration.py  test_fixtures_async.py  test_fixtures_core.py  test_framework_isolation.py  test_import_coverage.py  test_manager_comprehensive.py  test_manager_core.py  test_pytest_plugin_coverage.py  test_reliability.py  test_reliability_async.py  test_sqlalchemy_utils_comprehensive.py  test_tcp_socket_support.py  test_utils.py  test_utils_comprehensive.py
