[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-pglite"
dynamic = ["version"]
description = "Python testing library for PGlite - in-memory PostgreSQL for tests"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Wey Gu", email = "weyl.gu@gmail.com" },
]
keywords = [
    "testing",
    "postgresql",
    "pglite",
    "database",
    "pytest",
    "sqlalchemy",
    "sqlmodel",
    "django",
    "pytest-django",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.1.1",
    "psycopg>=3.0.0",
    "asyncpg>=0.29.0", 
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "django>=4.0.0",
    "pytest-django>=4.5.0",
    "fastapi>=0.115.12",
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "bandit[toml]>=1.8.3",
    "safety>=3.5.2",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
    "types-psutil>=7.0.0",
]
psycopg = [
    "psycopg>=3.0.0",
]
asyncpg = [
    "asyncpg>=0.29.0",
]
async = [
    "asyncpg>=0.29.0",
    "pytest-asyncio>=0.21.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0.41",
]
sqlmodel = [
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]
django = [
    "django>=4.0.0",
    "pytest-django>=4.5.0",
]
fastapi = [
    "sqlalchemy>=2.0.41",
    "fastapi>=0.115.12",
    "sqlmodel>=0.0.24",
]
extensions = [
    "pgvector>=0.4.1",
    "numpy>=1.0.0"
]
test-extensions = [
    "py-pglite[extensions]",
]
all = [
    "psycopg>=3.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "django>=4.0.0",
    "pytest-django>=4.5.0",
    "fastapi>=0.115.12",
    "pytest-asyncio>=0.21.0",
    "py-pglite[extensions]",
]

[project.urls]
Homepage = "https://github.com/wey-gu/py-pglite"
Documentation = "https://github.com/wey-gu/py-pglite#readme"
Repository = "https://github.com/wey-gu/py-pglite"
Issues = "https://github.com/wey-gu/py-pglite/issues"

[project.entry-points.pytest11]
py_pglite = "py_pglite.pytest_plugin"

[tool.hatch.version]
path = "py_pglite/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["py_pglite"]

[tool.mypy]
python_version = "3.10"
strict = false  # Too strict for this mixed framework project
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

# Exclude problematic paths
exclude = [
    "examples/testing-patterns/.*/conftest\\.py$",
    "build/",
    "dist/",
]

# Allow untyped definitions in test files
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

# Ignore Django files due to complexity
[[tool.mypy.overrides]]
module = "py_pglite.django.*"
ignore_errors = true

# Allow untyped external imports  
[[tool.mypy.overrides]]
module = [
    "django.*",
    "sqlalchemy.*", 
    "psycopg.*",
    "fastapi.*",
    "pytest_django.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

# Preserve critical imports for pytest plugin functionality
[tool.ruff.lint.per-file-ignores]
"py_pglite/pytest_plugin.py" = [
    "F401",  # Unused import (needed for fixture registration)
    "E501",  # Line too long (error messages)
]
"py_pglite/fixtures.py" = ["F401"]
"py_pglite/sqlalchemy/fixtures.py" = ["F401"] 
"py_pglite/django/fixtures.py" = ["F401"]
"py_pglite/django/backend/*.py" = ["F401", "E501"]
"py_pglite/django/utils.py" = ["F401"]
"py_pglite/manager.py" = ["E501"]
"*/conftest.py" = ["F401"]

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["py_pglite"]
omit = [
    "*/tests/*",
    "*/test_*",
    "examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
testpaths = ["tests", "examples"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
# Disable pytest-django for examples to prevent interference
# Users can run: pytest examples/ -p no:django
# Or the examples will work with our zero-config approach 